api/deploy.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: alfred
  name: alfred

spec:
  selector:
    matchLabels:
      app: alfred

  template:
    metadata:
      labels:
        app: alfred

    spec:
      containers:
        - image: ghcr.io/quaternionmedia/alfred:main
          imagePullPolicy: Always
          name: alfred
          command:
            ['uvicorn', 'alfred.main:app', '--host', '0.0.0.0', '--port', '80']
          volumeMounts:
            - mountPath: '/app/site'
              name: site
            - mountPath: '/app/dist'
              name: dist
          resources:
            limits:
              cpu: '1000m'
              memory: '2Gi'
            requests:
              cpu: '100m'
              memory: '100Mi'
      volumes:
        - name: site
          persistentVolumeClaim:
            claimName: al-site
        - name: dist
          persistentVolumeClaim:
            claimName: al-dist
