api/render.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: render
  name: render

spec:
  selector:
    matchLabels:
      app: render

  template:
    metadata:
      labels:
        app: render

    spec:
      containers:
        - image: ghcr.io/quaternionmedia/alfred:pr-113
          imagePullPolicy: Always
          name: alfred
          command: ['/bin/sh', '-c']
          args: ['fc-cache -f -v && mkdir -p alfred/data && mkdir -p alfred/videos && celery -A alfred.core.utils:renderer --workdir alfred/ worker --concurrency=1']
          volumeMounts:
            - mountPath: /root/.fonts/
              name: fonts
            - mountPath: /cred/
              name: credentials
          resources:
            limits:
              cpu: 4000m
              memory: 4Gi
            requests:
              cpu: 100m
              memory: 100Mi
      volumes:
        - name: fonts
          persistentVolumeClaim:
            claimName: fonts
        - name: credentials
          persistentVolumeClaim:
            claimName: credentials
